Adding some comments

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 </head>
 
 <body>
+  <!-- this is the navbar -->
   <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -70,6 +71,7 @@
 </div><!-- /.container-fluid -->
 </nav>
   <!-- Main jumbotron for a primary marketing message or call to action -->
+  <!-- This is the opening heading  -->
 <div id="white">
   <div class="jumbotron">
     <div id="about" class="container">
@@ -79,7 +81,7 @@
       <p><a class="btn btn-primary btn-lg" href="./aboutme.html" role="button">About Me »</a></p>
     </div>
   </div>
-
+<!-- This is the menu linking to different parts of the site -->
   <div class="container">
     <!-- Example row of columns -->
     <div class="row">
