more comment commiting

--- a/aboutme.html
+++ b/aboutme.html
@@ -29,11 +29,11 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 
-  <!-- Script for nav Bar-->
  
 </head>
 
 <body>
+  <!-- This is the Nav Bar -->
   <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
